[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "u9c"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "attrs",
    "cattrs",
    "aiofiles",
    "aiohttp",
    "click",
    "rich",
]

[project.scripts]
u9c = "u9c.cli:u9c"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["E501"]


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true

[mypy-aiofiles]
ignore_missing_imports = true
